# ChangeLog for media-gfx/cldx-themes
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cldx-themes-11.15 (05 Mar 2012)

  05 Mar 2012; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldx-themes-11.15.ebuild:
  Bump version

  05 Dec 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cldx-themes-11.12.ebuild:
  mark 11.12 stable

*cldx-themes-11.12 (30 Nov 2011)

  30 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldx-themes-11.12.ebuild:
  Version bump

*cldx-themes-11.9 (20 Sep 2011)

  20 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldx-themes-11.9.ebuild:
  Version bump

*cldx-themes-11.6 (17 May 2011)

  17 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldx-themes-11.6.ebuild:
  Bump version

*cldx-themes-11.3 (09 Mar 2011)

  09 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldx-themes-11.3.ebuild:
  Version bump.

*cldx-themes-11.0-r5 (27 Dec 2010)

  27 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cldx-themes-11.0-r4.ebuild, +cldx-themes-11.0-r5.ebuild:
  Update for add 1024x600

*cldx-themes-11.0-r3 (27 Dec 2010)

  27 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cldx-themes-11.0-r2.ebuild, +cldx-themes-11.0-r3.ebuild:
  Update for add 1024x600

*cldx-themes-10.9-r3 (17 Nov 2010)

  17 Nov 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cldx-themes-10.9-r2.ebuild, +cldx-themes-10.9-r3.ebuild:
  depend on media-gfx/splashutils

*cldx-themes-10.9-r2 (01 Oct 2010)

  01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cldx-themes-10.9-r1.ebuild, +cldx-themes-10.9-r2.ebuild:
  Update calculate.eclass.

*cldx-themes-10.9-r1 (06 Sep 2010)

  06 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cldx-themes-10.9.ebuild, +cldx-themes-10.9-r1.ebuild:
  Update method of initrd refresh.

*cldx-themes-10.9 (24 Aug 2010)

  24 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldx-themes-10.9.ebuild:
  Bump version.
