@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cldx-themes-12.0-r1 (30 Aug 2012)
+
+  30 Aug 2012; Iurii Blokhin (jblohin) <jb@calculate.ru>
+  +cldx-themes-12.0-r1.ebuild:
+  Changest session icon in lxdm theme
+
 *cldx-themes-11.15 (05 Mar 2012)
 
   05 Mar 2012; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
